# Copyright © 2025 - 2026 GlacieTeam.All rights reserved.
#
# This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0. If a copy of the MPL was not
# distributed with this file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# SPDX-License-Identifier: MPL-2.0

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chest_form_api_endstone"
version = "2.0.0"
dependencies = ["rapidnbt >= 1.3.1", "bedrock-protocol-packets >= 0.0.6"]
authors = [{ name = "GlacieTeam" }]
description = "Chest Form API for Endstone"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords = ["endstone", "chest_form_api"]
